--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js-cookie": "^3.0.1",
+    "jsonfile": "^6.1.0",
     "morgan": "~1.9.1"
   }
 }
